@@ -72,6 +72,20 @@ public class QnaPostRepositoryImpl implements QnaPostRepository {
 	}
 
 	/**
+	 * 내가 작성한 질문 목록 조회 (페이징)
+	 * @param memberId 회원 ID
+	 * @param pageable 페이징 정보
+	 * @return 내가 작성한 질문 목록 페이지
+	 */
+	@Override
+	public Page<QnaPost> findMyQuestions(Long memberId, Pageable pageable) {
+		Page<QnaPostJpaEntity> page =
+			jpa.findByTypeAndMemberIdOrderByCreatedAtDesc(QnaType.QUESTION, memberId, pageable);
+		List<QnaPost> content = page.getContent().stream().map(QnaPostMapper::toDomain).toList();
+		return new PageImpl<>(content, pageable, page.getTotalElements());
+	}
+
+	/**
 	 * 부모 ID로 자식 답변들 조회
 	 * @param parentId 부모 질문 ID
 	 * @return 자식 답변 목록
@@ -79,7 +93,38 @@ public class QnaPostRepositoryImpl implements QnaPostRepository {
 	@Override
 	public List<QnaPost> findChildren(Long parentId) {
 		return jpa.findByParentIdOrderByCreatedAtAsc(parentId)
-			.stream().map(QnaPostMapper::toDomain).toList();
+			.stream()
+			.map(QnaPostMapper::toDomain)
+			.collect(java.util.stream.Collectors.toList());
+	}
+
+	/**
+	 * 루트 질문 목록 조회 (페이징)
+	 * @param pageable 페이징 정보
+	 * @return 루트 질문 목록 페이지
+	 */
+	@Override
+	public Page<QnaPost> findRootQuestions(Pageable pageable) {
+		Page<QnaPostJpaEntity> page =
+			jpa.findByTypeAndParentIdIsNullOrderByCreatedAtDesc(QnaType.QUESTION, pageable);
+		List<QnaPost> content = page.getContent().stream().map(QnaPostMapper::toDomain).toList();
+		return new PageImpl<>(content, pageable, page.getTotalElements());
+	}
+
+	/**
+	 * 내가 작성한 루트 질문 목록 조회 (페이징)
+	 * @param memberId 회원 ID
+	 * @param pageable 페이징 정보
+	 * @return 내가 작성한 루트 질문 목록 페이지
+	 */
+	@Override
+	public Page<QnaPost> findMyRootQuestions(Long memberId, Pageable pageable) {
+		Page<QnaPostJpaEntity> page =
+			jpa.findByTypeAndMemberIdAndParentIdIsNullOrderByCreatedAtDesc(
+				QnaType.QUESTION, memberId, pageable
+			);
+		List<QnaPost> content = page.getContent().stream().map(QnaPostMapper::toDomain).toList();
+		return new PageImpl<>(content, pageable, page.getTotalElements());
 	}
 
 	/**
